Added Water Video to Background

--- a/about.html
+++ b/about.html
@@ -1,8 +1,37 @@
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mason Clark Personal Project</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <video autoplay muted loop id="myvideo">
+        <source src="pathtovideo.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+    <header>
+        <h1>About Me</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello I am Mason Clark a student at Michigan Technological University studying Computer Science. <br>
+            I enjoy video games like Valorant, Escape from Tarkov, and anything horror related. <br>
+            I enjoy watching football and occasionally watch basketball. Being from Michigan I am a huge Detroit Lions fan.
+        </p>
+    </section>
+    <footer>
+        <p>© 2024 Mason Clark. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
