--- a/index.html
+++ b/index.html
@@ -7,27 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video autoplay muted loop id="myvideo">
+        <source src="Water.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
     <header>
         <h1>Mason Clark Personal Projects</h1>
         <nav>
             <ul>
-                <li><a href="#about">About:</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section id="about">
-        <h2>About Me</h2>
-        <p>Hello I am Mason Clark a student at Michigan Technological University studying Computer Science.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>This is currently my first WIP website</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: clarkmason42@gmail.com  Phone: 989-335-5789  LinkedIn: </p>
+        <h2>Welcome!</h2>
+        <p>This is my first website created to hold all of the projects I have or am currently working on. </p>
     </section>
     <footer>
         <p>© 2024 Mason Clark. All rights reserved.</p>
