--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myvideo">
-        <source src="pathtovideo.mp4" type="video/mp4">
+        <source src="Water.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
     <header>
